# btrfs-recon

./: README.md  alembic.ini  btrfs_recon.py  go.mod  mypy.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 070b2ea975f0_add_lookup_indices_for_key_address_and_.py  0808385e46be_add_treenode_generation_pass_thru_index.py  275168ff8072_add_unique_check_constraints_for_address.py  301555ab7694_reenable_fileextentitem_check_.py  30a945ec1fef_add_keytype_0_to_enum_type.py  9605133964e8_add_chunktree_mat_view.py  9c3931e75ff4_add_rootitem_model.py  9f06a495ffee_add_additional_lookup_indices_for_.py  a596ebed6540_add_computed_file_extension_column_to_.py  a7ab0413b781_add_subvol_keytypes_to_enum_type.py  d4df1e6dc149_include_key_id_in_all_lookup_indices.py  ddd6be5957a2_allow_null_inodeitem_times_to_account_.py  def933329547_add_chunkitem_flag_fields_to_chunktree_.py  eece6c9f11c6_add_unique_check_constraints_for_.py  f380aa51b36a_remove_overly_strict_fileextentitem_.py
btrfs/: constants.go  types.go
btrfs_recon/: __init__.py  __main__.py  _config.py  btrfs_recon.py  cli.py  constants.py  db.py  parsing.py  structure.py  types.py
btrfs_recon/cli/: __init__.py  base.py  structure.py  types.py
btrfs_recon/cli/db/: __init__.py  base.py  fs.py  init.py  shell.py
btrfs_recon/persistence/: __init__.py
btrfs_recon/persistence/fields/: __init__.py  generic.py  uint.py
btrfs_recon/persistence/models/: __init__.py  _views.py  address.py  base.py  base_node.py  chunk_item.py  chunk_tree.py  dev_item.py  dir_item.py  file_extent_item.py  fs.py  inode.py  key.py  physical.py  root_item.py  superblock.py  tree_node.py
btrfs_recon/persistence/serializers/: __init__.py  base.py  chunk_item.py  dir_item.py  fields.py  file_extent_item.py  inode.py  key.py  registry.py  root_item.py  superblock.py  tree_node.py
btrfs_recon/structure/: __init__.py  base.py  chunk_item.py  dev_item.py  dir_item.py  extent_data.py  extent_item.py  fields.py  file_extent_item.py  header.py  inode.py  item.py  key.py  leaf_item.py  root_item.py  root_ref.py  superblock.py  tree_node.py
btrfs_recon/util/: chunk_cache.py  itertools.py  properties.py
tests/btrfs_recon/structure/: test_superblock.py
