[tool.poetry]
name = "btrfs-recon"
version = "0.1.0"
description = ""
authors = ["Zach Kanzler <they4kman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

click = "^8.0.3"
construct = "^2.10.67"
inflection = "^0.5.1"
intervaltree = "^3.1.0"
psycopg = {extras = ["binary"], version = "^3.0.7"}
sqlalchemy = {git = "https://github.com/sqlalchemy/sqlalchemy.git", rev = "1221407", extras = ["mypy", "asyncio"]}
sqlalchemy-repr = "^0.0.2"
SQLAlchemy-Utils = "^0.38.2"
marshmallow-sqlalchemy = "^0.27.0"

[tool.poetry.dev-dependencies]
construct-typing = "^0.5.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
