[tool.poetry]
name = "btrfs-recon"
version = "0.1.0"
description = ""
authors = ["Zach Kanzler <they4kman@gmail.com>"]

[tool.poetry.scripts]
btrfs-recon = "btrfs_recon.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"

alembic = "^1.7.5"
anyio = "^3.5.0"
asyncclick = "^8.0.3.1"
construct = "^2.10.67"
inflection = "^0.5.1"
intervaltree = "^3.1.0"
psycopg = {extras = ["binary"], version = "^3.0.7"}
python-dateutil = "^2.8.2"
sqlalchemy = {url = "https://github.com/sqlalchemy/sqlalchemy/tarball/18c6b74562680a15544cd51eaf236ec52d069783"}
sqlalchemy-repr = "^0.0.2"
SQLAlchemy-Utils = "^0.38.2"
marshmallow-sqlalchemy = "^0.27.0"
sqlalchemy2-stubs = "^0.0.2-alpha.19"
greenlet = "!=0.4.17"

[tool.poetry.dev-dependencies]
construct-typing = "^0.5.2"
mypy = "^0.910"
nest-asyncio = "^1.5.4"
sqlparse = "^0.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
